# MyPwd

./: .gitignore  index.html  package.json  pnpm-lock.yaml
extension/: README.md  background.js  content.css  content.js  manifest.json  popup.html  popup.js
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  server.rs
src-tauri/src/auth/: mod.rs  pin.rs  windows_hello.rs
src-tauri/src/backup/: mod.rs
src-tauri/src/credentials/: generator.rs  mod.rs
src-tauri/src/crypto/: master.rs  vault.rs
src-tauri/src/import/: browser_detect.rs  chromium_direct.rs  csv_import.rs  dedup.rs  mod.rs
src/components/auth/: LockScreen.tsx  SetupWizard.tsx
src/components/credentials/: CredentialDetail.tsx  CredentialForm.tsx  CredentialList.tsx  PasswordGenerator.tsx
src/components/import/: CsvDropZone.tsx  DuplicateResolver.tsx  ImportDialog.tsx  ImportPreview.tsx
src/components/layout/: Header.tsx  Sidebar.tsx
src/components/settings/: BackupRestore.tsx  SettingsPage.tsx
src/hooks/: useAuth.ts  useBackup.ts  useCredentials.ts  useImport.ts
src/i18n/: LangContext.tsx  index.ts
src/types/: credential.ts  import.ts
