[package]
name = "mypwd"
version = "0.1.0"
description = "PC Password Manager"
authors = ["you"]
edition = "2021"

[lib]
name = "mypwd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
zeroize = { version = "1.7", features = ["derive"] }
bcrypt = "0.15"
rand = "0.8"
base64 = "0.22"
csv = "1.3"
arboard = "3"
tokio = { version = "1", features = ["time", "sync"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
warp = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Security_Cryptography",
    "Win32_Security_Credentials",
    "Security_Credentials",
] }
